test/netlist/error/unused-block.bop
A(a) = b
where
  b = Not(a);
end where;

Main(a) = b
where
  b = Not(a);
end where;
